# stm32_cmake_project_architecture

./: .gitignore  CMakeLists.txt  build.bat  cubeide_gcc.cmake  custom_gcc_win.cmake
app/: CMakeLists.txt
app/app_shell/: CMakeLists.txt
app/app_shell/inc/: app_shell.h
app/app_shell/port/inc/: app_shell_port.h
app/app_shell/port/src/: app_shell_port.c
app/app_shell/src/: app_shell.c
app/app_test/: CMakeLists.txt
app/app_test/inc/: app_test.h
app/app_test/port/inc/: app_test_port.h
app/app_test/port/src/: app_test_port.c
app/app_test/src/: app_test.c
bsp/: CMakeLists.txt
bsp/led/: CMakeLists.txt
bsp/led/adapter/inc/: bsp_led_adapter.h
bsp/led/adapter/src/: bsp_led_adapter.c
bsp/led/driver/inc/: bsp_led_driver.h
bsp/led/driver/src/: bsp_led_driver.c
bsp/led/handler/inc/: bsp_led_handler.h
bsp/led/handler/src/: bsp_led_handler.c
bsp/serialport/: CMakeLists.txt
bsp/serialport/adapter/inc/: bsp_serialport_adapter.h
bsp/serialport/adapter/src/: bsp_serialport_adapter.c
bsp/serialport/driver/inc/: bsp_serialport_driver.h
bsp/serialport/driver/src/: bsp_serialport_driver.c
bsp/serialport/handler/inc/: bsp_serialport_handler.h
bsp/serialport/handler/src/: bsp_serialport_handler.c
mcu/: CMakeLists.txt
mcu/config/: CMakeLists.txt
mcu/config/FreeRTOS/: CMakeLists.txt
mcu/config/FreeRTOS/ST/: CMakeLists.txt
mcu/config/FreeRTOS/ST/STM32WBxx/: CMakeLists.txt
mcu/config/FreeRTOS/ST/STM32WBxx/inc/: FreeRTOSConfig.h
mcu/core/: CMakeLists.txt
mcu/core/inc/: mcu_core.h
mcu/core/src/: mcu_core.c
mcu/driver/: CMakeLists.txt
mcu/driver/CMSIS/: CMakeLists.txt
mcu/driver/CMSIS/Core/: CMakeLists.txt
mcu/driver/CMSIS/Device/: CMakeLists.txt
mcu/driver/CMSIS/Device/ST/: CMakeLists.txt
mcu/driver/CMSIS/Device/ST/STM32WBxx/: CMakeLists.txt
mcu/driver/CMSIS/RTOS2/: CMakeLists.txt
mcu/driver/STM32WBxx_HAL_Driver/: CMakelists.txt
mcu/driver/STM32WBxx_HAL_Driver/Inc/: stm32wbxx_hal_conf.h
mcu/gpio/: CMakeLists.txt
mcu/gpio/inc/: mcu_gpio.h
mcu/gpio/src/: mcu_gpio.c
mcu/inc/: mcu.h
mcu/time/: CMakeLists.txt
mcu/time/inc/: mcu_time.h
mcu/time/src/: mcu_time.c
mcu/uart/: CMakeLists.txt
mcu/uart/inc/: mcu_uart.h
mcu/uart/src/: mcu_uart.c
middleware/: CMakeLists.txt
middleware/FreeRTOS/: CMakeLists.txt
osal/: CMakeLists.txt
osal/core/inc/: osal_core.h
osal/core/src/: osal_core.c
osal/extension/inc/: osal_extension.h
osal/extension/src/: osal_extension.c
osal/inc/: osal.h
osal/src/: osal.c
project/: CMakeLists.txt  main.c
system/: CMakeLists.txt
system/core/: CMakeLists.txt
system/core/inc/: system_core.h
system/core/src/: system_core.c
system/inc/: system.h
system/src/: system.c
utility/: CMakeLists.txt
utility/letter_shell/: CMakeLists.txt
utility/letter_shell/port/: shell_cfg_user.h
utility/letter_shell/src/: shell_cfg.h
utility/lwrb/: CMakeLists.txt
